[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/Montserrat/Montserrat-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://styles/optionButtonStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://scripts/panel.gd" type="Script" id=3]
[ext_resource path="res://images/color_picker_icon.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.694118, 0.470588, 0.984314, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0.2, 0.2, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.694118, 0.470588, 0.984314, 1 )
shadow_color = Color( 0, 0, 0, 0.52549 )
shadow_size = 5
shadow_offset = Vector2( 0.5, 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Montserrat/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = SubResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 10 )
Button/styles/hover = SubResource( 9 )
Button/styles/normal = SubResource( 6 )
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 6
MarginContainer/constants/margin_right = 6
MarginContainer/constants/margin_top = 4
OptionButton/styles/hover = ExtResource( 2 )
OptionButton/styles/normal = ExtResource( 2 )
OptionButton/styles/pressed = ExtResource( 2 )
PanelContainer/styles/panel = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.356863, 0.301961, 0.478431, 1 )

[sub_resource type="DynamicFont" id=8]
size = 19
font_data = ExtResource( 1 )

[node name="Panel" type="PanelContainer"]
margin_right = 269.0
margin_bottom = 600.0
rect_clip_content = true
size_flags_vertical = 3
theme = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 268.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 4.0
margin_right = 262.0
margin_bottom = 48.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 205.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
text = "      GDpick"
align = 1

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 257.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2
icon = ExtResource( 4 )
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 267.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 6.0
margin_top = 4.0
margin_right = 261.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_top = 2.0
margin_right = 176.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Format"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 180.0
margin_right = 255.0
margin_bottom = 20.0
text = "GDscript"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 267.0
margin_bottom = 92.0

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 267.0
margin_bottom = 550.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer3"]
margin_left = 6.0
margin_top = 4.0
margin_right = 261.0
margin_bottom = 450.0
follow_focus = true

[node name="colorList" type="VBoxContainer" parent="VBoxContainer/MarginContainer3/ScrollContainer"]
margin_right = 255.0
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 554.0
margin_right = 267.0
margin_bottom = 558.0

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 562.0
margin_right = 267.0
margin_bottom = 598.0
custom_constants/margin_right = 0
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer4"]
margin_left = 6.0
margin_top = 4.0
margin_right = 267.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="aboutButton" type="Button" parent="VBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 77.0
margin_right = 127.0
margin_bottom = 24.0
text = "About"

[node name="expoortButton" type="Button" parent="VBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 131.0
margin_right = 183.0
margin_bottom = 24.0
text = "Export"

[connection signal="mouse_entered" from="VBoxContainer/PanelContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/PanelContainer/HBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer2/HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/HBoxContainer/aboutButton" to="." method="_on_aboutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer4/HBoxContainer/expoortButton" to="." method="_on_expoortButton_pressed"]
